webpage_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webpage-service
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-throttle: "4"
  labels:
    app: webpage-service
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: tinyweb
  sessionAffinity: None
