ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpage-ingress
spec:
  rules:
    - host: tinyweb.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webpage-service
                port: 
                  number: 80
